--- a/index.html
+++ b/index.html
@@ -6,21 +6,51 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- BOOTSTRAP CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
   <title>Jeu De Dès</title>
 </head>
 <body>
   <!--header start-->
-  <header class="container-fluid p-5 d-flex justify-content-center align-items-center bg-danger">
-    <img src="images\dices.png" alt="dices image" width="100" height="100">
-    <h1 class="ms-3">JEU DE DÈS</h1>
+  <header class="container-fluid p-5 bg-danger">
+    <div class="row d-flex justify-content-center align-items-center">
+      <div  class="col d-flex justify-content-end">
+        <img src="images\dices.png" alt="dices image" width="100" height="100">
+      </div>
+      <h1 class="col">JEU DE DÈS</h1>
+    </div>
+    <div class="row d-inline-flex mt-3">
+      <button class="btn btn-outline-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+        Règles de jeu
+      </button>
+      
+      <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasExampleLabel">Les règles :</h5>
+          <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <div>
+            -Chaque joueur possède un score temporaire (ROUND) et un score global (GLOBAL). <br>
+            -À chaque tour, le joueur a son ROUND initialisé à 0 et peut lancer un dé autant de fois qu'il le souhaite. <br> 
+            -Le résultat d’un lancer est ajouté au ROUND.<br> 
+            -Lors de son tour, le joueur peut décider à tout moment de: <br> 
+              .Cliquer sur l’option “Hold”, qui permet d’envoyer les points du ROUND vers le GLOBAL. Ce sera alors letour de l’autre joueur.<br> 
+              .Lancer le dé. S’il obtient un 1, son score ROUND est perdu et c’est la fin de son tour.<br> 
+            -Le premier joueur qui atteint les 100 points sur global gagne le jeu.
+          </div>
+        </div>
+      </div>
+    </div>
   </header>
   <!--header end-->
   <!--Main start-->
   <main class="container-fluid">
     <div class="row">
       <!--LEFT SIDE OF MAIN-->
-      <section class="col col-sm-5 text-center mx-auto">
-        <h2 class="mt-5 row justify-content-center">PLAYER 1</h2>
+      <section class="col col-sm-5 text-center mx-auto" id="sectionP-1">
+        <h2 class="mt-5 row justify-content-center" id="player1"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-circle-fill text-danger redPoint-1" viewBox="0 0 16 16">
+          <circle cx="8" cy="8" r="8"/>
+        </svg>PLAYER 1</h2>
         <div id="globalP1" class="row text-danger display-2 pb-5 justify-content-center">00</div>
         <div class="row justify-content-center">
           <div class="bg-danger mt-5 " style="width: fit-content;">
@@ -37,15 +67,10 @@
             <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
             <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
           </svg>
-          NEWGAME
+          <a href="#">NEWGAME</a>
         </div>
         <div id="dice" class="mt-5 mb-5 pb-3">
-          <img src="images\dice-face-6.png" alt="your dice face is 6" width="70" height="70" class="d-none">
-          <img src="images\dice-face-1.jpg" alt="your dice face is 1" width="70" height="70" class="d-none">
-          <img src="images\dice-face-2.png" alt="your dice face is 2" width="70" height="70" class="">
-          <img src="images\dice-face-3.png" alt="your dice face is 3" width="70" height="70" class="d-none">
-          <img src="images\dice-face-4.png" alt="your dice face is 4" width="70" height="70" class="d-none">
-          <img src="images\dice-face-5.png" alt="your dice face is 5" width="70" height="70" class="d-none">
+          <img src="images/dice6.png" alt="your dice face" width="70" height="70">
         </div>
       
         <div id="rollDice" class="mt-5 mb-2">
@@ -53,7 +78,7 @@
             <path d="M11.534 7h3.932a.25.25 0 0 1 .192.41l-1.966 2.36a.25.25 0 0 1-.384 0l-1.966-2.36a.25.25 0 0 1 .192-.41zm-11 2h3.932a.25.25 0 0 0 .192-.41L2.692 6.23a.25.25 0 0 0-.384 0L.342 8.59A.25.25 0 0 0 .534 9z"/>
             <path fill-rule="evenodd" d="M8 3c-1.552 0-2.94.707-3.857 1.818a.5.5 0 1 1-.771-.636A6.002 6.002 0 0 1 13.917 7H12.9A5.002 5.002 0 0 0 8 3zM3.1 9a5.002 5.002 0 0 0 8.757 2.182.5.5 0 1 1 .771.636A6.002 6.002 0 0 1 2.083 9H3.1z"/>
           </svg>
-          ROLLDICE
+          <a href="#">ROLLDICE</a> 
         </div>
 
         <div id="hold">
@@ -61,13 +86,15 @@
             <path fill-rule="evenodd" d="M3.5 6a.5.5 0 0 0-.5.5v8a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5v-8a.5.5 0 0 0-.5-.5h-2a.5.5 0 0 1 0-1h2A1.5 1.5 0 0 1 14 6.5v8a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 14.5v-8A1.5 1.5 0 0 1 3.5 5h2a.5.5 0 0 1 0 1h-2z"/>
             <path fill-rule="evenodd" d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
           </svg>
-          HOLD
+          <a href="#">HOLD</a>
         </div>
       </div>
 
       <!--RIGHT SIDE OF MAIN-->
-      <section class="col col-sm-5 text-center mx-auto">
-        <h2 class="mt-5 row justify-content-center">PLAYER 2</h2>
+      <section class="col col-sm-5 text-center mx-auto" id="sectionP-2">
+        <h2 class="mt-5 row justify-content-center" id="player2"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-circle-fill text-danger redPoint-2" viewBox="0 0 16 16">
+          <circle cx="8" cy="8" r="8"/>
+        </svg>PLAYER 2</h2>
         <div id="globalP2" class="row text-danger display-2 pb-5 justify-content-center">00</div>
         <div class="row justify-content-center">
           <div class="bg-danger mt-5" style="width: fit-content;">
@@ -82,10 +109,11 @@
 
   <!--Footer start-->
   <footer>
-
+    <div class="z-index">The Winner Is Player </div>
   </footer>
   <!--fOOTER END-->
 </body>
 <!--BOOTSTRAP JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="script.js"></script>
 </html>
