--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 </head>
 <body>
   <!--header start-->
-  <header class="container-fluid p-5 bg-danger">
+  <header class="container-fluid py-4 bg-danger">
     <div class="row d-flex justify-content-center align-items-center">
       <div  class="col d-flex justify-content-end">
         <img src="images\dices.png" alt="dices image" width="100" height="100">
       </div>
       <h1 class="col">JEU DE DÈS</h1>
     </div>
-    <div class="row d-inline-flex mt-3">
+    <div class="row d-inline-flex mt-3 ps-3">
       <button class="btn btn-outline-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
         Règles de jeu
       </button>
