Add joke API integration and display functionality to HTML

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
         </div>
       </section>
     </div>
+    <div class="row bg-danger d-flex justify-content-center align-items-center text-light" id="jokeContainer"></div>
   </main>
   <!--Main end-->
 
